[gd_scene load_steps=13 format=3 uid="uid://cw3foc5m7l8ge"]

[ext_resource type="Script" uid="uid://ctnr7437f0fcu" path="res://scenes/main scenes/Tutorial/TutorialDeck/tutorial_deck.gd" id="1_ub7x2"]
[ext_resource type="Shader" uid="uid://tvpfvluk8hvf" path="res://scenes/Menu/fracture_background.gdshader" id="2_ueov6"]
[ext_resource type="Texture2D" uid="uid://ccwuigx8bnpsp" path="res://assets/background/Fratura_central.jpg" id="3_dx5sq"]
[ext_resource type="Script" uid="uid://ckgw7vb3rieii" path="res://scenes/main scenes/Tutorial/TutorialDeck/deck_tutorial.gd" id="4_f6sqv"]
[ext_resource type="Texture2D" uid="uid://dqj57she863dn" path="res://assets/sprites/Slots/Quarzto.png" id="5_phppk"]
[ext_resource type="PackedScene" uid="uid://dapf7tew78ua2" path="res://scenes/Cards/card_manager.tscn" id="6_tbujl"]
[ext_resource type="Script" uid="uid://5hv4pjs1xcht" path="res://addons/richtext2/text_effects/anims/rte_fader.gd" id="7_2e0h2"]
[ext_resource type="PackedScene" uid="uid://se8i2us8xx1p" path="res://scenes/main scenes/Match/pause_button.tscn" id="8_dx5sq"]
[ext_resource type="Script" uid="uid://b6mbstaftpedd" path="res://addons/richtext2/rich_text_animation.gd" id="8_kw73d"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qwtks"]
shader = ExtResource("2_ueov6")
shader_parameter/speed = 1.0
shader_parameter/intensity = 1.5

[sub_resource type="LabelSettings" id="LabelSettings_3tjcb"]
line_spacing = 0.0
font_size = 50
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="RichTextEffect" id="RichTextEffect_qfwpu"]
resource_name = "fader"
script = ExtResource("7_2e0h2")
metadata/rt = 10992801110386

[node name="TutorialDeck" type="Node2D"]
script = ExtResource("1_ub7x2")

[node name="Fundo" type="Sprite2D" parent="."]
z_index = -10
material = SubResource("ShaderMaterial_qwtks")
position = Vector2(960, 540)
scale = Vector2(1.388, 1.388)
texture = ExtResource("3_dx5sq")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
custom_minimum_size = Vector2(1920, 1090)
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0, 0, 0.501961)

[node name="Deck" type="Node2D" parent="."]
position = Vector2(-213, 540)
script = ExtResource("4_f6sqv")

[node name="Sprite2D" type="Sprite2D" parent="Deck"]
modulate = Color(1, 1, 1, 0.74902)
scale = Vector2(0.132258, 0.124358)
texture = ExtResource("5_phppk")

[node name="Label" type="Label" parent="Deck"]
z_index = 5
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -27.0
offset_right = 27.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "0"
label_settings = SubResource("LabelSettings_3tjcb")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="CardManager" parent="." instance=ExtResource("6_tbujl")]
z_index = 0

[node name="Text" type="RichTextLabel" parent="."]
clip_contents = false
custom_minimum_size = Vector2(0, 165)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 225.5
offset_top = 550.0
offset_right = 1694.5
offset_bottom = 1050.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_colors/font_outline_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/bold_italics_font_size = 40
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/mono_font_size = 40
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
bbcode_enabled = true
fit_content = true
horizontal_alignment = 1
vertical_alignment = 2
custom_effects = [SubResource("RichTextEffect_qfwpu")]
script = ExtResource("8_kw73d")
progress = 1.0
visible_character = 172
_transforms = Array[Transform2D]([Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 56, 378), Transform2D(1, 0, 0, 1, 66, 378), Transform2D(1, 0, 0, 1, 91, 378), Transform2D(1, 0, 0, 1, 115, 378), Transform2D(1, 0, 0, 1, 132, 378), Transform2D(1, 0, 0, 1, 155, 378), Transform2D(1, 0, 0, 1, 166, 378), Transform2D(1, 0, 0, 1, 192, 378), Transform2D(1, 0, 0, 1, 216, 378), Transform2D(1, 0, 0, 1, 226, 378), Transform2D(1, 0, 0, 1, 249, 378), Transform2D(1, 0, 0, 1, 259, 378), Transform2D(1, 0, 0, 1, 279, 378), Transform2D(1, 0, 0, 1, 304, 378), Transform2D(1, 0, 0, 1, 342, 378), Transform2D(1, 0, 0, 1, 367, 378), Transform2D(1, 0, 0, 1, 390, 378), Transform2D(1, 0, 0, 1, 407, 378), Transform2D(1, 0, 0, 1, 423, 378), Transform2D(1, 0, 0, 1, 434, 378), Transform2D(1, 0, 0, 1, 445, 378), Transform2D(1, 0, 0, 1, 471, 378), Transform2D(1, 0, 0, 1, 494, 378), Transform2D(1, 0, 0, 1, 519, 378), Transform2D(1, 0, 0, 1, 543, 378), Transform2D(1, 0, 0, 1, 553, 378), Transform2D(1, 0, 0, 1, 576, 378), Transform2D(1, 0, 0, 1, 602, 378), Transform2D(1, 0, 0, 1, 618, 378), Transform2D(1, 0, 0, 1, 635, 378), Transform2D(1, 0, 0, 1, 658, 378), Transform2D(1, 0, 0, 1, 668, 378), Transform2D(1, 0, 0, 1, 693, 378), Transform2D(1, 0, 0, 1, 712, 378), Transform2D(1, 0, 0, 1, 722, 378), Transform2D(1, 0, 0, 1, 734, 378), Transform2D(1, 0, 0, 1, 758, 378), Transform2D(1, 0, 0, 1, 780, 378), Transform2D(1, 0, 0, 1, 803, 378), Transform2D(1, 0, 0, 1, 828, 378), Transform2D(1, 0, 0, 1, 853, 378), Transform2D(1, 0, 0, 1, 870, 378), Transform2D(1, 0, 0, 1, 893, 378), Transform2D(1, 0, 0, 1, 913, 378), Transform2D(1, 0, 0, 1, 923, 378), Transform2D(1, 0, 0, 1, 946, 378), Transform2D(1, 0, 0, 1, 956, 378), Transform2D(1, 0, 0, 1, 979, 378), Transform2D(1, 0, 0, 1, 989, 378), Transform2D(1, 0, 0, 1, 1009, 378), Transform2D(1, 0, 0, 1, 1034, 378), Transform2D(1, 0, 0, 1, 1072, 378), Transform2D(1, 0, 0, 1, 1097, 378), Transform2D(1, 0, 0, 1, 1121, 378), Transform2D(1, 0, 0, 1, 1141, 378), Transform2D(1, 0, 0, 1, 1156, 378), Transform2D(1, 0, 0, 1, 1181, 378), Transform2D(1, 0, 0, 1, 1191, 378), Transform2D(1, 0, 0, 1, 1216, 378), Transform2D(1, 0, 0, 1, 1241, 378), Transform2D(1, 0, 0, 1, 1258, 378), Transform2D(1, 0, 0, 1, 1268, 378), Transform2D(1, 0, 0, 1, 1291, 378), Transform2D(1, 0, 0, 1, 1314, 378), Transform2D(1, 0, 0, 1, 1324, 378), Transform2D(1, 0, 0, 1, 1344, 378), Transform2D(1, 0, 0, 1, 1367, 378), Transform2D(1, 0, 0, 1, 1385, 378), Transform2D(1, 0, 0, 1, 1400, 378), Transform2D(1, 0, 0, 1, 1424, 378), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 8, 433), Transform2D(1, 0, 0, 1, 34, 433), Transform2D(1, 0, 0, 1, 59, 433), Transform2D(1, 0, 0, 1, 70, 433), Transform2D(1, 0, 0, 1, 90, 433), Transform2D(1, 0, 0, 1, 113, 433), Transform2D(1, 0, 0, 1, 133, 433), Transform2D(1, 0, 0, 1, 144, 433), Transform2D(1, 0, 0, 1, 154, 433), Transform2D(1, 0, 0, 1, 174, 433), Transform2D(1, 0, 0, 1, 197, 433), Transform2D(1, 0, 0, 1, 222, 433), Transform2D(1, 0, 0, 1, 247, 433), Transform2D(1, 0, 0, 1, 272, 433), Transform2D(1, 0, 0, 1, 282, 433), Transform2D(1, 0, 0, 1, 305, 433), Transform2D(1, 0, 0, 1, 328, 433), Transform2D(1, 0, 0, 1, 338, 433), Transform2D(1, 0, 0, 1, 363, 433), Transform2D(1, 0, 0, 1, 386, 433), Transform2D(1, 0, 0, 1, 396, 433), Transform2D(1, 0, 0, 1, 416, 433), Transform2D(1, 0, 0, 1, 439, 433), Transform2D(1, 0, 0, 1, 464, 433), Transform2D(1, 0, 0, 1, 488, 433), Transform2D(1, 0, 0, 1, 498, 433), Transform2D(1, 0, 0, 1, 518, 433), Transform2D(1, 0, 0, 1, 543, 433), Transform2D(1, 0, 0, 1, 560, 433), Transform2D(1, 0, 0, 1, 571, 433), Transform2D(1, 0, 0, 1, 581, 433), Transform2D(1, 0, 0, 1, 613, 433), Transform2D(1, 0, 0, 1, 637, 433), Transform2D(1, 0, 0, 1, 647, 433), Transform2D(1, 0, 0, 1, 667, 433), Transform2D(1, 0, 0, 1, 692, 433), Transform2D(1, 0, 0, 1, 730, 433), Transform2D(1, 0, 0, 1, 753, 433), Transform2D(1, 0, 0, 1, 773, 433), Transform2D(1, 0, 0, 1, 797, 433), Transform2D(1, 0, 0, 1, 807, 433), Transform2D(1, 0, 0, 1, 832, 433), Transform2D(1, 0, 0, 1, 856, 433), Transform2D(1, 0, 0, 1, 866, 433), Transform2D(1, 0, 0, 1, 891, 433), Transform2D(1, 0, 0, 1, 915, 433), Transform2D(1, 0, 0, 1, 932, 433), Transform2D(1, 0, 0, 1, 947, 433), Transform2D(1, 0, 0, 1, 959, 433), Transform2D(1, 0, 0, 1, 984, 433), Transform2D(1, 0, 0, 1, 1007, 433), Transform2D(1, 0, 0, 1, 1017, 433), Transform2D(1, 0, 0, 1, 1039, 433), Transform2D(1, 0, 0, 1, 1063, 433), Transform2D(1, 0, 0, 1, 1083, 433), Transform2D(1, 0, 0, 1, 1106, 433), Transform2D(1, 0, 0, 1, 1116, 433), Transform2D(1, 0, 0, 1, 1134, 433), Transform2D(1, 0, 0, 1, 1157, 433), Transform2D(1, 0, 0, 1, 1177, 433), Transform2D(1, 0, 0, 1, 1200, 433), Transform2D(1, 0, 0, 1, 1224, 433), Transform2D(1, 0, 0, 1, 1248, 433), Transform2D(1, 0, 0, 1, 1265, 433), Transform2D(1, 0, 0, 1, 1288, 433), Transform2D(1, 0, 0, 1, 1298, 433), Transform2D(1, 0, 0, 1, 1321, 433), Transform2D(1, 0, 0, 1, 1331, 433), Transform2D(1, 0, 0, 1, 1356, 433), Transform2D(1, 0, 0, 1, 1379, 433), Transform2D(1, 0, 0, 1, 1399, 433), Transform2D(1, 0, 0, 1, 1418, 433), Transform2D(1, 0, 0, 1, 1442, 433), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 485, 488), Transform2D(1, 0, 0, 1, 505, 488), Transform2D(1, 0, 0, 1, 528, 488), Transform2D(1, 0, 0, 1, 546, 488), Transform2D(1, 0, 0, 1, 561, 488), Transform2D(1, 0, 0, 1, 585, 488), Transform2D(1, 0, 0, 1, 604, 488), Transform2D(1, 0, 0, 1, 614, 488), Transform2D(1, 0, 0, 1, 639, 488), Transform2D(1, 0, 0, 1, 662, 488), Transform2D(1, 0, 0, 1, 672, 488), Transform2D(1, 0, 0, 1, 687, 488), Transform2D(1, 0, 0, 1, 711, 488), Transform2D(1, 0, 0, 1, 729, 488), Transform2D(1, 0, 0, 1, 767, 488), Transform2D(1, 0, 0, 1, 790, 488), Transform2D(1, 0, 0, 1, 800, 488), Transform2D(1, 0, 0, 1, 824, 488), Transform2D(1, 0, 0, 1, 835, 488), Transform2D(1, 0, 0, 1, 858, 488), Transform2D(1, 0, 0, 1, 881, 488), Transform2D(1, 0, 0, 1, 897, 488), Transform2D(1, 0, 0, 1, 921, 488), Transform2D(1, 0, 0, 1, 938, 488), Transform2D(1, 0, 0, 1, 950, 488), Transform2D(1, 0, 0, 1, 973, 488)])
_char_size = Array[Vector2]([Vector2(0, 0), Vector2(0, 31), Vector2(22, 31), Vector2(22, 31), Vector2(16, 31), Vector2(22, 31), Vector2(7, 31), Vector2(22, 31), Vector2(23, 31), Vector2(0, 31), Vector2(22, 31), Vector2(0, 31), Vector2(19, 31), Vector2(23, 31), Vector2(35, 31), Vector2(22, 31), Vector2(22, 31), Vector2(16, 31), Vector2(17, 31), Vector2(8, 31), Vector2(7, 31), Vector2(22, 31), Vector2(22, 31), Vector2(22, 31), Vector2(23, 31), Vector2(0, 31), Vector2(22, 31), Vector2(22, 31), Vector2(17, 31), Vector2(16, 31), Vector2(22, 31), Vector2(0, 31), Vector2(23, 31), Vector2(19, 31), Vector2(0, 31), Vector2(14, 31), Vector2(23, 31), Vector2(24, 31), Vector2(22, 31), Vector2(22, 31), Vector2(23, 31), Vector2(16, 31), Vector2(22, 31), Vector2(19, 31), Vector2(0, 31), Vector2(22, 31), Vector2(0, 31), Vector2(22, 31), Vector2(0, 31), Vector2(19, 31), Vector2(23, 31), Vector2(35, 31), Vector2(22, 31), Vector2(23, 31), Vector2(19, 31), Vector2(17, 31), Vector2(23, 31), Vector2(0, 31), Vector2(22, 31), Vector2(23, 31), Vector2(16, 31), Vector2(0, 31), Vector2(25, 31), Vector2(23, 31), Vector2(0, 31), Vector2(19, 31), Vector2(22, 31), Vector2(16, 31), Vector2(17, 31), Vector2(22, 31), Vector2(19, 31), Vector2(0, 0), Vector2(22, 31), Vector2(22, 31), Vector2(8, 31), Vector2(19, 31), Vector2(22, 31), Vector2(19, 31), Vector2(10, 31), Vector2(0, 31), Vector2(19, 31), Vector2(22, 31), Vector2(22, 31), Vector2(22, 31), Vector2(23, 31), Vector2(0, 31), Vector2(15, 31), Vector2(23, 31), Vector2(0, 31), Vector2(22, 31), Vector2(22, 31), Vector2(0, 31), Vector2(19, 31), Vector2(22, 31), Vector2(22, 31), Vector2(22, 31), Vector2(0, 31), Vector2(19, 31), Vector2(23, 31), Vector2(16, 31), Vector2(9, 31), Vector2(0, 31), Vector2(27, 31), Vector2(23, 31), Vector2(0, 31), Vector2(19, 31), Vector2(23, 31), Vector2(35, 31), Vector2(22, 31), Vector2(19, 31), Vector2(23, 31), Vector2(0, 31), Vector2(22, 31), Vector2(22, 31), Vector2(0, 31), Vector2(22, 31), Vector2(22, 31), Vector2(16, 31), Vector2(17, 31), Vector2(8, 31), Vector2(22, 31), Vector2(22, 31), Vector2(0, 31), Vector2(24, 31), Vector2(23, 31), Vector2(19, 31), Vector2(22, 31), Vector2(0, 31), Vector2(16, 31), Vector2(22, 31), Vector2(19, 31), Vector2(22, 31), Vector2(22, 31), Vector2(22, 31), Vector2(16, 31), Vector2(22, 31), Vector2(0, 31), Vector2(21, 31), Vector2(0, 31), Vector2(22, 31), Vector2(22, 31), Vector2(19, 31), Vector2(19, 31), Vector2(22, 31), Vector2(19, 31), Vector2(0, 0), Vector2(19, 31), Vector2(22, 31), Vector2(16, 31), Vector2(17, 31), Vector2(22, 31), Vector2(19, 31), Vector2(0, 31), Vector2(22, 31), Vector2(22, 31), Vector2(0, 31), Vector2(19, 31), Vector2(23, 31), Vector2(16, 31), Vector2(35, 31), Vector2(22, 31), Vector2(0, 31), Vector2(22, 31), Vector2(7, 31), Vector2(22, 31), Vector2(22, 31), Vector2(17, 31), Vector2(23, 31), Vector2(16, 31), Vector2(8, 31), Vector2(22, 31), Vector2(9, 31)])
_alpha = Array[float]([1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0])
_alpha_goal = Array[float]([1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0])
_forced_finish_delay = -0.0313437
default_wait_time = 1.0
play_on_bbcode = true
play_speed = 50.0
fade_out = false
fade_in_speed = 10.0
fade_out_speed = 120.0
ctc_offset = Vector2(1, -0.5)
ctc_on_finished = false
ctc_on_wait = false
shortcut_expression = true
shortcut_bookmark = true
signal_quotes = true
signal_stars = true
bbcode = "O baralho é compartilhado entre os jogadores e é composto por 40 cartas únicas, sendo 10 de cada cor. No começo da partida você receberá 5 dessas cartas de forma aleatória."
effects = 2
alignment = 1
color = Color(1, 1, 1, 1)
emoji_scale = 1.0
font = ""
font_auto_setup = true
font_size = 40
font_bold_weight = 1.5
font_italics_slant = 0.25
font_italics_weight = -0.25
shadow_enabled = false
shadow_offset = 0.08
shadow_alpha = 0.25
shadow_outline_size = 0.1
outline_size = 0
outline_mode = 1
outline_adjust = 0.8
outline_hue_adjust = 0.0125
nicer_quotes_enabled = true
nicer_quotes_format = "“%s”"
markdown_enabled = true
markdown_format_bold = "[b]%s[]"
markdown_format_italics = "[i]%s[]"
markdown_format_bold_italics = "[bi]%s[]"
markdown_format_highlight = "[green;sin]%s[]"
markdown_format_bold2 = "[b]*%s*[]"
markdown_format_italics2 = "[i;gray]*%s*[]"
markdown_format_bold_italics2 = "%s"
context_enabled = true
context_path = NodePath("/root/State")
context_state = {}
context_rich_objects = true
context_rich_ints = true
context_rich_array = true
autostyle_numbers = true
autostyle_numbers_tag = "%s"
autostyle_numbers_pad_decimals = true
autostyle_numbers_decimals = 2
autostyle_emojis = true
effect_weight = 0.0
image_path = "res://"
image_resize_to_font_size = true
image_scale = 1.0
meta_auto_https = true
meta_cursor = 2
override_bbcodeEnabled = true
override_clipContents = false
override_fitContent = true
metadata/_custom_type_script = "uid://b6mbstaftpedd"

[node name="ContinueButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1741.0
offset_top = 987.0
offset_right = 1870.0
offset_bottom = 1030.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "Continuar"

[node name="PauseButton" parent="." instance=ExtResource("8_dx5sq")]

[node name="ReturnButton" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 987.0
offset_right = 179.0
offset_bottom = 1030.0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "Voltar"

[connection signal="button_up" from="ContinueButton" to="." method="_on_continue_button_button_up"]
[connection signal="button_up" from="ReturnButton" to="." method="_on_return_button_button_up"]
